--- a/admin-web/src/main/frontend/public/index.html
+++ b/admin-web/src/main/frontend/public/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>&nbsp;</title>
 </head>
-<body>
+<body class="light">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 </body>
