--- a/admin-web/src/main/frontend/public/index.html
+++ b/admin-web/src/main/frontend/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>&nbsp;</title>
+    <style>
+        /*loading bg*/
+        .dark {
+            background-color: rgb(39, 39, 39);
+        }
+    </style>
 </head>
 <body class="light">
 <noscript>You need to enable JavaScript to run this app.</noscript>
