--- a/admin-web/src/main/frontend/public/index.html
+++ b/admin-web/src/main/frontend/public/index.html
@@ -14,5 +14,6 @@
 <body class="light">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
+<pre style="display: none" id="resourceInfo"></pre>
 </body>
 </html>
