--- a/blog-web/src/main/frontend/public/index.html
+++ b/blog-web/src/main/frontend/public/index.html
@@ -3,12 +3,18 @@
 <head>
     <base href="/"/>
     <meta charset="utf-8"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1"/>
-    <meta name="theme-color" content="#000000"/>
-    <title></title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+    <title>&nbsp;</title>
+    <style>
+        /*loading bg*/
+        .dark {
+            background-color: rgb(39, 39, 39);
+        }
+    </style>
 </head>
-<body>
+<body class="light">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
+<pre style="display: none" id="resourceInfo"></pre>
 </body>
 </html>
