optimize config load

--- a/admin-web/src/main/frontend/public/index.html
+++ b/admin-web/src/main/frontend/public/index.html
@@ -27,80 +27,6 @@
 <body class="light">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="app"></div>
-<pre style="display: none" id="resourceInfo"></pre>
-<pre style="display: none" id="__SSR_DATE__">{
-    "data": {
-        "statisticsInfo": {
-            "commCount": 0,
-            "toDayCommCount": 0,
-            "clickCount": 12351,
-            "articleCount": 161
-        },
-        "serverInfo": {
-            "java.specification.version": "21",
-            "sun.jnu.encoding": "UTF-8",
-            "java.class.path": "/home/xiaochun/git/zrlog/web/target/classes:/home/xiaochun/git/zrlog/blog-web/target/classes:/home/xiaochun/git/zrlog/admin-token/target/classes:/home/xiaochun/git/zrlog/service/target/classes:/home/xiaochun/git/zrlog/data/target/classes:/home/xiaochun/git/zrlog/common/target/classes:/home/xiaochun/.m2/repository/com/google/code/gson/gson/2.10.1/gson-2.10.1.jar:/home/xiaochun/.m2/repository/org/jsoup/jsoup/1.15.3/jsoup-1.15.3.jar:/home/xiaochun/.m2/repository/com/atlassian/commonmark/commonmark/0.11.0/commonmark-0.11.0.jar:/home/xiaochun/.m2/repository/eu/bitwalker/UserAgentUtils/1.21/UserAgentUtils-1.21.jar:/home/xiaochun/.m2/repository/org/slf4j/slf4j-api/1.7.36/slf4j-api-1.7.36.jar:/home/xiaochun/.m2/repository/org/slf4j/slf4j-simple/1.7.36/slf4j-simple-1.7.36.jar:/home/xiaochun/.m2/repository/com/zaxxer/HikariCP/5.0.1/HikariCP-5.0.1.jar:/home/xiaochun/.m2/repository/com/mysql/mysql-connector-j/8.2.0/mysql-connector-j-8.2.0.jar:/home/xiaochun/.m2/repository/com/google/protobuf/protobuf-java/3.21.9/protobuf-java-3.21.9.jar:/home/xiaochun/.m2/repository/commons-dbutils/commons-dbutils/1.8.1/commons-dbutils-1.8.1.jar:/home/xiaochun/git/zrlog/admin-web/target/classes:/home/xiaochun/.m2/repository/net/coobird/thumbnailator/0.4.8/thumbnailator-0.4.8.jar:/home/xiaochun/.m2/repository/org/freemarker/freemarker/2.3.32/freemarker-2.3.32.jar:/home/xiaochun/.m2/repository/com/hibegin/simplewebserver/0.3.73/simplewebserver-0.3.73.jar",
-            "java.vm.vendor": "Private Build",
-            "sun.arch.data.model": "64",
-            "java.vendor.url": "Unknown",
-            "user.timezone": "Asia/Shanghai",
-            "java.vm.specification.version": "21",
-            "os.name": "Linux",
-            "sun.java.launcher": "SUN_STANDARD",
-            "user.country": "US",
-            "sun.boot.library.path": "/usr/lib/jvm/java-21-openjdk-amd64/lib",
-            "sun.java.command": "com.zrlog.web.Application",
-            "zrlog.version": "1.0.0-SNAPSHOT",
-            "jdk.debug": "release",
-            "sun.cpu.endian": "little",
-            "user.home": "/home/xiaochun",
-            "user.language": "en",
-            "sun.stderr.encoding": "UTF-8",
-            "java.specification.vendor": "Oracle Corporation",
-            "java.version.date": "2023-10-17",
-            "java.home": "/usr/lib/jvm/java-21-openjdk-amd64",
-            "zrlog.buildTime": "2015-03-29",
-            "file.separator": "/",
-            "java.vm.compressedOopsMode": "Zero based",
-            "sun.stdout.encoding": "UTF-8",
-            "line.separator": "\n",
-            "java.vm.specification.vendor": "Oracle Corporation",
-            "java.specification.name": "Java Platform API Specification",
-            "dbServer.version": "10.11.2-MariaDB-1:10.11.2+maria~ubu2204",
-            "sun.management.compiler": "HotSpot 64-Bit Tiered Compilers",
-            "java.runtime.version": "21.0.1+12-Ubuntu-223.10",
-            "user.name": "xiaochun",
-            "stdout.encoding": "UTF-8",
-            "os.type": "linux",
-            "path.separator": ":",
-            "os.version": "6.5.0-14-generic",
-            "docker": "",
-            "java.runtime.name": "OpenJDK Runtime Environment",
-            "zrlog.runMode": "RELEASE",
-            "file.encoding": "UTF-8",
-            "zrlog.runtime.path": "/home/xiaochun/git/zrlog",
-            "java.vm.name": "OpenJDK 64-Bit Server VM",
-            "java.vendor.url.bug": "Unknown",
-            "java.io.tmpdir": "/tmp",
-            "java.version": "21.0.1",
-            "zrlog.buildId": "0000000",
-            "user.dir": "/home/xiaochun/git/zrlog",
-            "os.arch": "amd64",
-            "server.info": "SimpleWebServer/0.3.73",
-            "java.vm.specification.name": "Java Virtual Machine Specification",
-            "java.util.logging.SimpleFormatter.format": "%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS %4$s %5$s%6$s%n",
-            "zrlog.pluginJvmArgs": "-Xms8m -Xmx32m -Dfile.encoding\u003dUTF-8",
-            "native.encoding": "UTF-8",
-            "java.library.path": "/usr/java/packages/lib:/usr/lib/x86_64-linux-gnu/jni:/lib/x86_64-linux-gnu:/usr/lib/x86_64-linux-gnu:/usr/lib/jni:/lib:/usr/lib",
-            "java.vm.info": "mixed mode, sharing",
-            "stderr.encoding": "UTF-8",
-            "java.vendor": "Private Build",
-            "java.vm.version": "21.0.1+12-Ubuntu-223.10",
-            "sun.io.unicode.encoding": "UnicodeLittle",
-            "java.class.version": "65.0"
-        }
-    },
-    "error": 0
-}</pre>
+<pre style="display: none" id="__SS_DATA__"></pre>
 </body>
 </html>
