Optimize static html cache plugin

--- a/admin-web/src/main/frontend/public/index.html
+++ b/admin-web/src/main/frontend/public/index.html
@@ -17,7 +17,7 @@
 
         /* 暗黑模式样式 */
         @media (prefers-color-scheme: dark) {
-            body {
+            .dark {
                 background-color: black;
                 color: white;
             }
